--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
     modCompileOnlyApi "maven.modrinth:farmers-delight-refabricated:1.20.1-2.1.1"
     modCompileOnlyApi "maven.modrinth:appleskin:2.5.1+mc1.20"
+
+    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.3.6")))
 }
 
 processResources {
