Added stonecutter.gradle for multi version support, changed icon's position from `assets` to `assets/saturative` and removed the LivingEntityRendererMixin.java

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.10
-	loader_version=0.15.11
+	minecraft_version=[VERSIONED]
+	yarn_mappings=[VERSIONED]
+	loader_version=[VERSIONED]
 
 # Mod Properties
 	mod_version = 1.0
@@ -13,5 +12,6 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = Saturative
 
 # Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.92.2+1.20.1
+	fabric_version=[VERSIONED]
+	farmers_delight_version=[VERSIONED]
+	appleskin_version=[VERSIONED]
