--- a/src/main/resources/saturative_appleskin_impl.mixins.json
+++ b/src/main/resources/saturative_appleskin_impl.mixins.json
@@ -6,7 +6,8 @@
   "mixins": [
   ],
   "client": [
-    "appleskin.HUDOverlayHandlerMixin"
+    "appleskin.HUDOverlayHandlerMixin",
+    "appleskin.HUDOverlayHandlerMixinOffsetsCache"
   ],
   "injectors": {
     "defaultRequire": 1
