--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,10 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modCompileOnlyApi "maven.modrinth:farmers-delight-refabricated:1.20.1-2.1.1"
-    modCompileOnlyApi "maven.modrinth:appleskin:2.5.1+mc1.20"
+    modCompileOnlyApi "maven.modrinth:farmers-delight-refabricated:${project.farmers_delight_version}"
+
+
+    modCompileOnlyApi "maven.modrinth:appleskin:${project.appleskin_version}"
     modCompileOnlyApi "maven.modrinth:sleep-tight:1.20-1.1.19"
 
     include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.3.6")))
